// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css composes 1`] = `
.css-w9g11r {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="css-w9g11r"
/>
`;

exports[`css composes with objects 1`] = `
.css-17yqurf {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  display: block;
  width: 30px;
  height: calc(40vw - 50px);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.css-17yqurf:hover {
  color: blue;
}

.css-17yqurf:after {
  content: " ";
  color: red;
}

@media (min-width: 420px) {
  .css-17yqurf {
    color: green;
  }
}

<div
  className="css-17yqurf"
/>
`;

exports[`css composes with undefined values 1`] = `
.css-awzhlo {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="css-awzhlo"
/>
`;

exports[`css handles more than 10 dynamic properties 1`] = `
.css-n3p8vq {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border-right: solid blue 54px;
  background: white;
  color: black;
  display: block;
  border-radius: 3px;
  padding: 25px;
  width: 500px;
  z-index: 100;
  font-size: 18px;
  text-align: center;
}

<div
  className="css-n3p8vq"
/>
`;

exports[`css handles objects 1`] = `
.css-71uu79 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="css-71uu79"
/>
`;
